Fix footer position on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -120,8 +120,9 @@ section {
 }
 
 #footer {
+    display: block;
     position: absolute;
-    top: 313%;
+    top: 100%;
     height: 8em;
     width: 100%;
     z-index: 100000000;
